--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
    }
       
     p.first {
-      margin-top:3rem;
+      margin-top:0;
     }
 
     h4 {
-      margin-top: 0rem;
+      margin-top: 5rem;
       margin-bottom: 2rem;
       font-size: 2.4rem;
       line-height: 1.35; 
