--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   <div class="wrapper">
     <div class="column">
-        <h4 class="title">RAZOR BLADE<br>TYPOGRAPHY</h4>
+        <h4 class="title">RAZOR<br>BLADE<br>TYPO<br>GRAPHY</h4>
         <h4 class="author">Angela Riechers</h4>
         <p class="first">Along with all things artisanal, pasture-raised, single origin, and bespoke, safety razors are making a comeback. You know, the double-edged blade that screws into a razor head featuring a skin guard that makes shaving smoother and yes, safer. Economically speaking, safety razors offers a vast savings over disposable razors and cartridges: a year’s supply of 100 Shark brand blades costs under $10 (using two blades/week) compared to about $280 for cartridge refills. Safety razor blades are of much higher quality than disposable blades, and are sharper and longer-lasting, too.</p>
         <p>However, our interest lies in the wealth of typography to be found on the blades’ packaging: colorful, cheerful, vernacular, and seemingly unchanged for decades. Places like the popular Dollar Shave Club and The Art of Shaving have adopted a more modern visual language for their branding, but there’s nothing quite as charming as the genuine article. Here’s an even eight examples, split between blades that are still available and some vintage packaging (because we just couldn’t resist).</p> 
