--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>... you know ;)</title>
+  <title>Razor Blade Typography</title>
 
   <!-- This sets the initial view for mobile devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -48,7 +48,7 @@
     }
 
     h4.title {
-		font-size: 4rem;
+		font-size: 8rem;
 		font-family:verdana;
       
     }
