--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     h4 {
       margin-top: 5rem;
       margin-bottom: 2rem;
+	  margin-left: 2rem;
       font-size: 2.4rem;
       line-height: 1.35; 
     }
