--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
     p {
       margin-top: 1rem;
       font-family: verdana;
+	  margin-left: 2rem;
    }
       
     p.first {
       margin-top:0;
+	  margin-left: 2rem;
     }
 
     h4 {
