--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
       margin-top: 1rem;
       font-family: verdana;
 	  margin-left: 2rem;
+	  margin-right: 2rem;
    }
       
     p.first {
       margin-top:0;
 	  margin-left: 2rem;
+	  margin-right: 2rem;
     }
 
     h4 {
