--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <!-- This sets the initial view for mobile devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <link rel="stylesheet" href="https://use.typekit.net/uof8vup.css">
 
   <style type="text/css" media="screen">
     html {
@@ -33,7 +35,7 @@
 
     p {
       margin-top: 1rem;
-      font-family: verdana;
+      font-family: "chalet-london-sixty";
 	  margin-left: 2rem;
 	  margin-right: 2rem;
    }
@@ -53,14 +55,14 @@
     h4.title {
 		margin-bottom: -4rem;
 		font-size: 7rem;
-		font-family:verdana;
+		font-family:"chalet-london-sixty";
       
     }
 
     h4.author {
-		font-family:verdana;
+		font-family:"chalet-london-sixty";
 		margin-bottom: 5rem;
-		margin-left: 4rem;
+		margin-left: 3rem;
       
     }
 
