--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       margin-bottom: 2rem;
 	  margin-left: 2rem;
       font-size: 2.4rem;
-      line-height: 1.35; 
+      line-height: .8; 
     }
 
     h4.title {
