--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       margin-bottom: 2rem;
 	  margin-left: 2rem;
       font-size: 2.4rem;
-      line-height: .85; 
+      line-height: 1; 
     }
 
     h4.title {
@@ -62,7 +62,7 @@
     h4.author {
 		font-family:"chalet-london-sixty";
 		margin-bottom: 5rem;
-		margin-left: 3rem;
+		margin-left: 2.5rem;
       
     }
 
