so much changed
list, paragraph width

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       line-height: 1.6;
       font-weight: 400;
       margin: 0;
+      font-family: "chalet-london-sixty";
+	  
     }
 
     p {
@@ -65,6 +67,11 @@
 		margin-left: 2.5rem;
       
     }
+	
+	ol {
+		margin-right: 1rem;
+		margin-right: 3.5rem;
+	}
 
     .wrapper {
       display:flex;
@@ -78,7 +85,7 @@
     /* Larger than mobile */
     @media (min-width: 400px) {
     	.column {
-    		width: 70rem; /*set column width here?*/
+    		width: 78rem; /*set column width here?*/
     	}
     }
 
@@ -106,14 +113,17 @@
         <h4 class="author">Angela Riechers</h4>
         <p class="first">Along with all things artisanal, pasture-raised, single origin, and bespoke, safety razors are making a comeback. You know, the double-edged blade that screws into a razor head featuring a skin guard that makes shaving smoother and yes, safer. Economically speaking, safety razors offers a vast savings over disposable razors and cartridges: a year’s supply of 100 Shark brand blades costs under $10 (using two blades/week) compared to about $280 for cartridge refills. Safety razor blades are of much higher quality than disposable blades, and are sharper and longer-lasting, too.</p>
         <p>However, our interest lies in the wealth of typography to be found on the blades’ packaging: colorful, cheerful, vernacular, and seemingly unchanged for decades. Places like the popular Dollar Shave Club and The Art of Shaving have adopted a more modern visual language for their branding, but there’s nothing quite as charming as the genuine article. Here’s an even eight examples, split between blades that are still available and some vintage packaging (because we just couldn’t resist).</p> 
-		<p>1. <strong>Feather</strong>. Feather blades are made of the same platinum-coated stainless steel used to manufacture surgical blades. The no-nonsense black and silver packaging mixes an illustration of feathers with decisive Art Deco-ish angles, bold all-caps sans serif type, and an industrial-looking script to convey both delicacy and strength.</p>
-		<p>2. <strong>Wilkinson Sword</strong>. The packaging for this line of Teflon-coated blades made in India and sold under the Gillette logo (which takes up quite a bit of real estate) doesn’t rely much on typography; the distinctive Wilkinson crossed-sword logo centers on the box over red and blue chevrons, with a letterspaced sans serif spelling out “saloon pack” underneath. </p>
-		<p>3. <strong>Gillette Super Thin</strong>. Made for the Southeast Asian market, this package is also mostly logo plus primary colors and bold sans serif type. What’s up with 1920’s dude with the ’stache, though? Someone needs a shave!</p>
-		<p>4. <strong>Shark</strong>. Like many others, this brand relies on the image of a predator to convey a sense of powerful, dangerous smoothness. The 50s-inspired script used for “Shark” carries a bit of a nostalgic Rat Pack good-looking/tough-guy aura.</p>
-		<p>5. <strong>Treet</strong>. Treet Platinum’s packaging uses a version of the brand’s logo with an oddly shaped capital “T” and lowercase “e” that could only have been hand-drawn. Sharp, upright, and all business, the lettering seems to practically dare you NOT to get an efficient shave.</p>
-		<p>6. <strong>Treet 2</strong>. The ridiculously cheerful red and yellow package sold in Pakistan uses a logo rendered in a heavy italic typeface with a couple of ball terminals thrown in. “Dura Sharp” floating in a (badly letterspaced) banner above the logo is anchored by Double Edge Blade below it, both in sans-serif all caps that counter the softer italics.</p>
-		<p>7. <strong>Voskhod</strong>. It means “sunrise” in Russian, and is also the name of a 1960s Soviet space program. The plain bold sans-serif italics on the package evoke neither, which feels like a wasted design opportunity. There is a certain overall grimness to this one.</p>
-		<p>8. <strong>Zaza</strong>. This brand, founded in 1917, claims to be the oldest existing industrial company in Turkey and the third oldest razor blade and hair clipper factory in the world. In addition to the Deco-ish type used for the brand name, there is some Gill Sans thrown in, but not enough. There are at least two other sans-serif faces used on the otherwise attractive package, which repeats both Super Stainless and Zaza twice. Editor needed, aisle three.</p>
+		
+		<ol>
+		<li><strong>Feather</strong>. Feather blades are made of the same platinum-coated stainless steel used to manufacture surgical blades. The no-nonsense black and silver packaging mixes an illustration of feathers with decisive Art Deco-ish angles, bold all-caps sans serif type, and an industrial-looking script to convey both delicacy and strength.</li>
+		<li><strong>Wilkinson Sword</strong>. The packaging for this line of Teflon-coated blades made in India and sold under the Gillette logo (which takes up quite a bit of real estate) doesn’t rely much on typography; the distinctive Wilkinson crossed-sword logo centers on the box over red and blue chevrons, with a letterspaced sans serif spelling out “saloon pack” underneath. </li>
+		<li><strong>Gillette Super Thin</strong>. Made for the Southeast Asian market, this package is also mostly logo plus primary colors and bold sans serif type. What’s up with 1920’s dude with the ’stache, though? Someone needs a shave!</li>
+		<li><strong>Shark</strong>. Like many others, this brand relies on the image of a predator to convey a sense of powerful, dangerous smoothness. The 50s-inspired script used for “Shark” carries a bit of a nostalgic Rat Pack good-looking/tough-guy aura.</li>
+		<li><strong>Treet</strong>. Treet Platinum’s packaging uses a version of the brand’s logo with an oddly shaped capital “T” and lowercase “e” that could only have been hand-drawn. Sharp, upright, and all business, the lettering seems to practically dare you NOT to get an efficient shave.</li>
+		<li><strong>Treet 2</strong>. The ridiculously cheerful red and yellow package sold in Pakistan uses a logo rendered in a heavy italic typeface with a couple of ball terminals thrown in. “Dura Sharp” floating in a (badly letterspaced) banner above the logo is anchored by Double Edge Blade below it, both in sans-serif all caps that counter the softer italics.</li>
+		<li><strong>Voskhod</strong>. It means “sunrise” in Russian, and is also the name of a 1960s Soviet space program. The plain bold sans-serif italics on the package evoke neither, which feels like a wasted design opportunity. There is a certain overall grimness to this one.</li>
+		<li><strong>Zaza</strong>. This brand, founded in 1917, claims to be the oldest existing industrial company in Turkey and the third oldest razor blade and hair clipper factory in the world. In addition to the Deco-ish type used for the brand name, there is some Gill Sans thrown in, but not enough. There are at least two other sans-serif faces used on the otherwise attractive package, which repeats both Super Stainless and Zaza twice. Editor needed, aisle three.</li>
+	</ol>
     </div>
   </div>
 
