--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
     p {
       margin-top: 1rem;
       font-family: "chalet-london-sixty";
-	  margin-left: 2rem;
+	  margin-left: 2.1rem;
 	  margin-right: 2rem;
+	  text-align:justify;
+	  hyphens:auto;
    }
       
     p.first {
@@ -70,9 +72,9 @@
 	
 	ol {
 		margin-right: 1rem;
-		margin-right: 3rem;
-        line-height: 1.6;
-        font-family: "chalet-london-sixty";
+		margin-right: 4rem;
+  	    text-align:justify;
+  	    hyphens:auto;
 	}
 
     .wrapper {
