--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     }
 
     body {
-      font-size: 1.6em; /* currently ems cause chrome bug misinterpreting rems on body element */
       line-height: 1.6;
       font-weight: 400;
       margin: 0;
@@ -38,8 +37,9 @@
     p {
       margin-top: 1rem;
       font-family: "chalet-london-sixty";
-	  margin-left: 2.1rem;
-	  margin-right: 2rem;
+	  font-size: 1.8em;
+	  margin-left: 2.5rem;
+	  margin-right: 2.5rem;
 	  text-align:justify;
 	  hyphens:auto;
    }
@@ -51,7 +51,7 @@
     h4 {
       margin-top: 5rem;
       margin-bottom: 2rem;
-	  margin-left: 2rem;
+	  margin-left: 2.5rem;
       font-size: 2.4rem;
       line-height: 1; 
     }
@@ -66,13 +66,14 @@
     h4.author {
 		font-family:"chalet-london-sixty";
 		margin-bottom: 5rem;
-		margin-left: 2rem;
+		margin-left: 2.5rem;
       
     }
 	
 	ol {
 		margin-right: 1rem;
 		margin-right: 4rem;
+		font-size:1.8em;
   	    text-align:justify;
   	    hyphens:auto;
 	}
@@ -93,7 +94,7 @@
     		width: 78rem; /*set column width here?*/
     	}
 		p {
-			font-size: 1.6rem;
+			font-size: 1.6em;
 			
 		}
     }
@@ -102,7 +103,12 @@
     @media (min-width: 550px) {}
 
     /* Larger than tablet */
-    @media (min-width: 750px) {}
+    @media (min-width: 750px) {
+    	p {
+    		font-size: 1.6em; /* currently ems cause chrome bug misinterpreting rems on body element */
+    	}
+    }
+		
 
     /* Larger than desktop */
     @media (min-width: 1000px) {}
