--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     p {
       margin-top: 1rem;
       font-family: "chalet-london-sixty";
-	  font-size: 1.8em;
+	  font-size: 1.5em;
 	  margin-left: 2.5rem;
 	  margin-right: 2.5rem;
 	  hyphens:auto;
@@ -51,13 +51,13 @@
       margin-top: 5rem;
       margin-bottom: 2rem;
 	  margin-left: 2.5rem;
-      font-size: 2.4rem;
+      font-size: 1.9rem;
       line-height: 1; 
     }
 
     h4.title {
 		margin-bottom: -3rem;
-		font-size: 7rem;
+		font-size: 5rem;
 		font-family:"chalet-london-sixty";
       
     }
@@ -72,7 +72,7 @@
 	ol {
 		margin-right: 1rem;
 		margin-right: 4rem;
-  	    font-size: 1.8em;
+  	    font-size: 1.5em;
   	    hyphens:auto;
 	}
 
@@ -81,7 +81,7 @@
     }
 
     .column {
-      width: 50rem; /* Set your column width here */
+      width: 35rem; /* Set your column width here */
       margin: auto;
 	
     }
@@ -89,37 +89,42 @@
     /* Larger than mobile */
     @media (min-width: 420px) {
     	.column {
-    		width: 78rem; /*set column width here?*/
+    		width: 40rem; /*set column width here?*/
     	}
 		p {
-			font-size: 1.6em;
+			font-size: 1.55em;
 			
 		}
-		ol {font-size: 1.6em;}
+		ol {font-size: 1.55em;}
     }
 
     /* Larger than phablet */
     @media (min-width: 550px) {
 		.column {
-    		width: 78rem; /*set column width here?*/
+    		width: 50rem; /*set column width here?*/
     	}
 		p {
 			font-size: 1.6em;
 			
 		}
+		h4.title {
+			font-size:5.5rem;
+		}
+		h4.author { font-size:1.9rem;}
 		ol {font-size: 1.6em;}
 	}
 
     /* Larger than tablet */
     @media (min-width: 768px) {
     	.column {
-    		width: 78rem; /*set column width here?*/
+    		width: 65rem; /*set column width here?*/
     	}
 		p {
-			font-size: 1.6em;
+			font-size: 1.65em;
 			
 		}
-		ol {font-size: 1.6em;}
+		h4.title {}
+		ol {font-size: 1.65em;}
     }
 		
 
@@ -129,10 +134,10 @@
     		width: 85rem; /*set column width here?*/
     	}
 		p {
-			font-size: 1.8em;
+			font-size: 1.7em;
 			
 		}
-		ol {font-size: 1.8em;}
+		ol {font-size: 1.7em;}
     }
 
     /* Larger than Desktop HD (4K and up) */
@@ -141,10 +146,10 @@
     		width: 95rem; /*set column width here?*/
     	}
 		p {
-			font-size: 1.9em;
+			font-size: 1.75em;
 			
 		}
-		ol {font-size: 1.9em;}
+		ol {font-size: 1.75em;}
     }
 		
     }
